--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <button class="botao" id="D10" onclick="tipoDado(10)">D10</button>
         <button class="botao" id="d12" onclick="tipoDado(12)">D12</button>
         <button class="botao" id="d20" onclick="tipoDado(20)">D20</button>
+        <button class="botao" id="d100" onclick="d100()">D100</button>
         <h4></h4>
     </div>
     <div>
